<resources>
    <string name="app_name">Mighty Kopite Quiz</string>
    <string name="title_home">Home</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_prediction">Prediction</string>
    <string name="title_result">Result</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_your_score">Your Score</string>
    <string name="total_quiz">/%d</string>
    <string name="score_note">You got %1$d out of %2$d correctly</string>
    <string name="title_leaderboard">Leaderboard</string>

    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="password_hint">********</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="welcome_back">Welcome Back, Kopite</string>
    <string name="todo">TODO</string>
    <string name="hey_kopite">Hey Kopite!</string>
    <string name="please_register_an_account">Please Register an account</string>
    <string name="name">Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="user_id">user_id</string>
    <string name="result_array">result_array</string>
    <string name="welcome">Welcome,</string>
    <string name="start_trivia">Start Trivia</string>
    <string name="your_score">Your Score</string>
    <string name="your_total_score">Your Total Score</string>
    <string name="reset_question">Reset Question</string>
    <string name="already_attempt_question">You have already attempt available quiz, please stay in touch for new quiz</string>
    <string name="already_attempt_prediction">You have already attempt prediction, please stay in touch for new predictions</string>
    <string name="not_yet_registered_sign_up">Not yet registered? Sign up</string>
    <string name="all_time_leaderboard">All Time Leaderboard</string>
    <string name="back">Back</string>
    <string name="question">Question</string>
    <string name="weekly_leaderboard">Weekly Leaderboard</string>
    <string name="this_week">This Week</string>
    <string name="all_time">All Time</string>
    <string name="get_reset_link">Get Reset Link</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_your_registered_email_and_get_reset_password_link">Enter your registered email and get reset password link</string>
    <string name="predict_games">Predict Games</string>
    <string name="next">Next</string>
    <string name="init_prediction_results">Init Prediction Results</string>
</resources>
