<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_login">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.ywna.quiz.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_your_score"
        android:name="com.example.ywna.quiz.ui.score.YourScoreFragment"
        android:label="@string/title_your_score"
        tools:layout="@layout/fragment_your_score" />

    <fragment
        android:id="@+id/navigation_leaderboard"
        android:name="com.example.ywna.quiz.ui.leaderboard.LeaderboardFragment"
        android:label="@string/title_leaderboard"
        tools:layout="@layout/fragment_all_time_leaderboard" />

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.example.ywna.quiz.ui.quiz.QuizFragment"
        android:label="@string/title_quiz"
        tools:layout="@layout/fragment_quiz" />
    <fragment
        android:id="@+id/navigation_result"
        android:name="com.example.ywna.quiz.ui.score.ResultFragment"
        android:label="@string/title_result"
        tools:layout="@layout/fragment_result" />
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.ywna.quiz.ui.auth.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.ywna.quiz.ui.auth.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/navigation_reset_password"
        android:name="com.example.ywna.quiz.ui.auth.ResetPasswordFragment"
        android:label="Reset Password"
        tools:layout="@layout/fragment_forgot_password" />
</navigation>