<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true"
        android:fitsSystemWindows="true"
        android:visibility="gone"
        android:focusable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:padding="100dp"/>

        <ProgressBar
            android:id="@+id/pv_login_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="50dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/email_login_form"
            style="@style/textFontStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/welcome_back"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                style="@style/textFontStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_to_continue"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_confirm_email_address_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_line"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/login_email"
                    style="@style/textFontStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:autofillHints="Email"
                    android:background="@null"
                    android:hint="@string/enter_your_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="0dp"
                    tools:targetApi="o" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/textFontStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/e_mail" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_line"
                app:hintEnabled="false"
                app:passwordToggleContentDescription="View password"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/login_password"
                    style="@style/textFontStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:autofillHints="Password"
                    android:background="@null"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="0dp"
                    tools:targetApi="o" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <TextView
                android:id="@+id/tv_forgot_password"
                style="@style/textFontStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="end"
                android:padding="8dp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt_login"
                style="@style/textFontStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/wrong_option_bg"
                android:padding="15dp"
                android:text="@string/title_login"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_new_user"
                style="@style/textFontStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/not_yet_registered_sign_up"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
