<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true"
        android:fitsSystemWindows="true"
        android:visibility="gone"
        android:focusable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:padding="100dp"/>

        <ProgressBar
            android:id="@+id/pv_register_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="50dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/email_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo" />

            <TextView
                style="@style/textFontStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/hey_kopite"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                style="@style/textFontStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_register_an_account"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_line"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/register_name"
                    style="@style/textFontStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:autofillHints="Name"
                    android:background="@null"
                    android:hint="@string/enter_your_full_name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:padding="0dp"
                    tools:targetApi="o" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/textFontStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_email_address_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_line"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/register_email"
                    style="@style/textFontStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:autofillHints="Email"
                    android:background="@null"
                    android:hint="@string/enter_your_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="0dp"
                    tools:targetApi="o" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/textFontStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/e_mail" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_line"
                app:hintEnabled="false"
                app:passwordToggleContentDescription="View password"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/register_password"
                    style="@style/textFontStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:autofillHints="Password"
                    android:background="@null"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="0dp"
                    tools:targetApi="o" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/textFontStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_confirm_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_line"
                app:hintEnabled="false"
                app:passwordToggleContentDescription="View password"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/register_confirm_password"
                    style="@style/textFontStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:autofillHints="Confirm Password"
                    android:background="@null"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="0dp"
                    tools:targetApi="o" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/textFontStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password" />

            <Button
                android:id="@+id/bt_register"
                style="@style/textFontStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/wrong_option_bg"
                android:padding="15dp"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_login"
                style="@style/textFontStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/already_have_an_account_sign_in"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>